--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <main>
-    <img src="" id="siteLogo" alt="Dog-Duck">
+    <img src="image/dogduck.jpg" id="siteLogo" alt="Dog-Duck">
     <h1>Odd Duck Store</h1>
     <section>
       <img>
@@ -23,8 +23,10 @@
   </main>
   <footer>
     <footer>
-       &copy 2013 Odd-Ducks <br>
-        Proudly published GitHub.
+        <P>
+            &copy 2013 Odd-Ducks <br>
+            Proudly published GitHub.
+        </P>
     </footer>
   </footer>
   <script src="js/script.js"></script>
