--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img>
     </section>
     <div>View Result</div>
-    <div>
+    <di id="chart">
       <canvas id="myChart"></canvas>
     </div>
    <footer>
