--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
       <img>
       <img>
     </section>
-    <div>View Results</div>
-    <ul></ul>
-  </main>
-  <footer>
-    <footer>
+    <div>View Result</div>
+    <di id="chart">
+      <canvas id="myChart"></canvas>
+    </div>
+   <footer>
         <P>
             &copy 2013 Odd-Ducks <br>
             Proudly published GitHub.
         </P>
     </footer>
-  </footer>
+   </main>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
