--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img>
     </section>
     <div>View Result</div>
-    <di id="chart">
+    <div id="chart">
       <canvas id="myChart"></canvas>
     </div>
    <footer>
@@ -29,8 +29,12 @@
         </P>
     </footer>
    </main>
+   <!--constructor chart ctx min.js-->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
   <script src="js/script.js"></script>
 </body>
-
 </html>
+
+
+
+
