--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <img>
       <img>
     </section>
-    <div>View Result</div>
-    <div id="chart">
+  <div>Subscribe</div>  
+    <div id="chartContainer">
       <canvas id="myChart"></canvas>
     </div>
    <footer>
-        <P>
+        <p>
             &copy 2013 Odd-Ducks <br>
             Proudly published GitHub.
-        </P>
+        </p>
     </footer>
    </main>
    <!--constructor chart ctx min.js-->
