--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,28 +12,25 @@
   <main>
     <img src="image/dogduck.jpg" id="siteLogo" alt="Dog-Duck">
     <h1>Odd Duck Store</h1>
-    <section>
+    <section classs="section-container">
       <img>
       <img>
       <img>
     </section>
-  <div>Subscribe</div>  
+    <div>Subscribe</div>
     <div id="chartContainer">
       <canvas id="myChart"></canvas>
     </div>
-   <footer>
-        <p>
-            &copy 2013 Odd-Ducks <br>
-            Proudly published GitHub.
-        </p>
+    <footer>
+      <p>
+        &copy 2013 Odd-Ducks <br>
+        Proudly published GitHub.
+      </p>
     </footer>
-   </main>
-   <!--constructor chart ctx min.js-->
+  </main>
+  <!--constructor chart ctx min.js-->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
-
-
-
-
