--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
     <img src="image/dogduck.jpg" id="siteLogo" alt="Dog-Duck">
     <h1>Odd Duck Store</h1>
-    <section classs="section-container">
+    <section id= "my-chart "classs="section-container" >
       <img>
       <img>
       <img>
